UI events, array events

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,13 +9,191 @@
     android:background="@color/Morado"
     tools:context=".WeekViewActivity">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/source_sans_pro_bold"
+        android:text="@string/calendario"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="15dp"
-        android:background="@drawable/rounded_shape">
+        android:background="@drawable/rounded_shape"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+
+            <info.androidhive.fontawesome.FontTextView
+                android:id="@+id/PreviousWeekAction"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:text="@string/fa_arrow_left_solid"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="20sp"
+                app:solid_icon="true" />
+
+            <TextView
+                android:id="@+id/monthYearTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:fontFamily="@font/source_sans_pro_bold"
+                android:text="Noviembre 2021"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="20sp" />
+
+
+            <info.androidhive.fontawesome.FontTextView
+                android:id="@+id/NextWeekAction"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:onClick="nextWeekAction"
+                android:text="@string/fa_arrow_right_solid"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="20sp"
+                app:solid_icon="true" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="DOM"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="LUN"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="MAR"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="MIE"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="JUE"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="VIE"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/source_sans_pro_semibold"
+                android:text="SAB"
+                android:textAlignment="center"
+                android:textColor="@color/Morado"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/calendarRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0.55dp"
+            android:orientation="horizontal"
+            android:layout_weight="0.55" />
+
+        <info.androidhive.fontawesome.FontTextView
+            android:id="@+id/newEvent"
+            android:layout_marginTop="20dp"
+            android:layout_width="50dp"
+            android:layout_height="1dp"
+            android:layout_weight="0.5"
+            android:background="@drawable/select_item_calendar"
+            android:gravity="center"
+            android:text="@string/fa_plus_solid"
+            android:textAlignment="center"
+            android:textColor="@color/btn_Azul"
+            android:textSize="20sp"
+            app:solid_icon="true"
+            android:onClick="newEvent"
+            android:elevation="4dp"/>
+
+        <ListView
+            android:id="@+id/eventList"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:padding="10dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10.0sp"/>
+
+
+    </LinearLayout>
 
 </LinearLayout>
 
