--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,118 +71,97 @@
             android:orientation="vertical"
             android:paddingTop="40dp">
 
-
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:layout_width="362dp"
                     android:layout_height="127dp"
                     android:background="@drawable/ficha_general"
-                    android:elevation="5dp">
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:elevation="5dp"
+                    android:paddingLeft="15dp">
 
                     <ImageView
                         android:id="@+id/IconImageWeather"
                         android:layout_width="130dp"
                         android:layout_height="110dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentBottom="true"
                         android:layout_marginStart="2dp"
                         android:adjustViewBounds="true"
                         android:contentDescription="@string/app_name"
                         android:scaleType="centerCrop"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0"
-                        tools:srcCompat="@tools:sample/avatars" />
+                        tools:srcCompat="@tools:sample/avatars"
+                        android:layout_weight="0.5"/>
 
-                    <TextView
-                        android:id="@+id/textViewCity"
-                        android:layout_width="134dp"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/textviewWeather"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/source_sans_pro"
-                        android:text="TextView"
-                        android:textAlignment="textStart"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:textColor="@color/Morado"
-                        android:textSize="15sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textviewWeather"
-                        app:layout_constraintVertical_bias="0.416" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="10"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingLeft="40dp"
+                        android:paddingTop="17dp">
 
-                    <info.androidhive.fontawesome.FontTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/textviewWeather"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="4dp"
-                        android:layout_toEndOf="@+id/IconImageWeather"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/ubicacionicono"
-                        android:text="@string/fa_map_marker_alt_solid"
-                        android:textColor="@color/Light_Morado"
-                        android:textSize="16sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/textViewCity"
-                        app:layout_constraintTop_toBottomOf="@+id/textviewWeather"
-                        app:layout_constraintVertical_bias="0.434"
-                        app:solid_icon="true" />
+                        <TextView
+                            android:id="@+id/text_fecha"
+                            android:layout_width="135dp"
+                            android:layout_height="20dp"
+                            android:fontFamily="@font/source_sans_pro_semibold"
+                            android:text="TextView"
+                            android:textColor="@color/Morado"
+                            android:textSize="15sp" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:gravity="center_vertical"
+                            android:layout_weight="0.9">
+                            <TextView
+                                android:id="@+id/textviewWeather"
+                                android:layout_width="50dp"
+                                android:layout_height="42dp"
+                                android:fontFamily="@font/source_sans_pro_semibold"
+                                android:text="-20"
+                                android:textAlignment="viewStart"
+                                android:textColor="@color/Morado"
+                                android:textSize="35sp"/>
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="63dp"
+                                android:layout_height="32dp"
+                                android:fontFamily="@font/source_sans_pro_semibold"
+                                android:text="°C"
+                                android:textColor="@color/Light_Morado"
+                                android:textSize="19sp" />
+                        </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="63dp"
-                        android:layout_height="32dp"
-                        android:layout_above="@+id/textViewCity"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginEnd="60dp"
-                        android:layout_toEndOf="@+id/IconImageWeather"
-                        android:fontFamily="@font/source_sans_pro_semibold"
-                        android:text="°C"
-                        android:textColor="@color/Light_Morado"
-                        android:textSize="19sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/text_fecha" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:layout_weight="1">
 
-                    <TextView
-                        android:id="@+id/textviewWeather"
-                        android:layout_width="131dp"
-                        android:layout_height="42dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="40dp"
-                        android:fontFamily="@font/source_sans_pro_semibold"
-                        android:text="-20"
-                        android:textAlignment="viewStart"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        android:textColor="@color/Morado"
-                        android:textSize="35sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/text_fecha" />
+                            <info.androidhive.fontawesome.FontTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/ubicacionicono"
+                                android:text="@string/fa_map_marker_alt_solid"
+                                android:textColor="@color/Light_Morado"
+                                android:textSize="16sp"
+                                app:solid_icon="true" />
 
-                    <TextView
-                        android:id="@+id/text_fecha"
-                        android:layout_width="135dp"
-                        android:layout_height="20dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="40dp"
-                        android:fontFamily="@font/source_sans_pro_semibold"
-                        android:text="TextView"
-                        android:textColor="@color/Morado"
-                        android:textSize="15sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                            <TextView
+                                android:id="@+id/textViewCity"
+                                android:layout_width="134dp"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/source_sans_pro"
+                                android:text="TextView"
+                                android:textAlignment="textStart"
+                                android:textColor="@color/Morado"
+                                android:layout_marginStart="5dp"
+                                android:textSize="15sp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
