--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="checkbox_theme" parent="Theme.CosmoNotes">
+        <item name="colorAccent">@color/Morado</item>
+        <item name="android:textColorSecondary">@color/eventoAzul</item>
+    </style>
 
     <style name="SplashTheme" parent="Theme.CosmoNotes">
         <item name="android:windowBackground">@drawable/splashscreen</item>
