--- a/app/src/main/res/layout/to_do_group.xml
+++ b/app/src/main/res/layout/to_do_group.xml
@@ -14,69 +14,77 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp"
-        android:background="@color/light_bg">
-
-        <androidx.cardview.widget.CardView
+        android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/ColorCategory"
+            android:layout_width="7dp"
+            android:layout_height="match_parent"
+            android:background="@color/eventoVerde"/>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp"
             android:background="@color/light_bg">
-
-            <LinearLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:background="@color/light_bg">
-                <TextView
-                    android:id="@+id/tv_GroupTitle"
-                    android:layout_width="0dp"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="8dp"
-                    android:text="8-txt-35"/>
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:background="@color/light_bg">
+                    <TextView
+                        android:id="@+id/tv_GroupTitle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginStart="8dp"
+                        android:text="8-txt-35"/>
 
-                <info.androidhive.fontawesome.FontTextView
-                    android:id="@+id/group_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_marginEnd="15dp"
-                    android:text="@string/fa_sort_down_solid"
-                    android:textColor="@color/Morado"
-                    android:textSize="25sp"
-                    app:solid_icon="true" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <info.androidhive.fontawesome.FontTextView
+                        android:id="@+id/group_arrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:layout_marginEnd="15dp"
+                        android:text="@string/fa_sort_down_solid"
+                        android:textColor="@color/Morado"
+                        android:textSize="25sp"
+                        app:solid_icon="true" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/nested_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            tools:listitem="@layout/to_do_item"/>
-
-        <LinearLayout
-            android:id="@+id/LL_group_lineSeparator"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp">
-            <View
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/nested_rv"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"/>
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                tools:listitem="@layout/to_do_item"/>
+
+            <LinearLayout
+                android:id="@+id/LL_group_lineSeparator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"/>
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/nested_rv_done"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="4dp"
+                android:padding="4dp"
+                tools:listitem="@layout/to_do_item" />
+
         </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/nested_rv_done"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="4dp"
-            android:padding="4dp"
-            tools:listitem="@layout/to_do_item" />
-
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
