--- a/app/src/main/res/layout/to_do_group.xml
+++ b/app/src/main/res/layout/to_do_group.xml
@@ -19,7 +19,8 @@
             android:id="@+id/ColorCategory"
             android:layout_width="7dp"
             android:layout_height="match_parent"
-            android:background="@color/eventoVerde"/>
+            android:orientation="horizontal"
+            android:background="@drawable/radioeventcell"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,13 +38,17 @@
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
                     android:background="@color/light_bg">
+
                     <TextView
                         android:id="@+id/tv_GroupTitle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginStart="8dp"
-                        android:text="8-txt-35"/>
+                        android:layout_weight="1"
+                        android:fontFamily="@font/source_sans_pro_semibold"
+                        android:text="8-txt-35"
+                        android:textColor="@color/Morado"
+                        android:textSize="16sp" />
 
                     <info.androidhive.fontawesome.FontTextView
                         android:id="@+id/group_arrow"
@@ -52,24 +57,36 @@
                         android:textAlignment="center"
                         android:layout_marginEnd="15dp"
                         android:text="@string/fa_sort_down_solid"
+                        android:padding="5dp"
                         android:textColor="@color/Morado"
                         android:textSize="25sp"
                         app:solid_icon="true" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <LinearLayout
+                android:id="@+id/btnAddNewToDo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="5dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Agregar nuevo evento"/>
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/nested_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="4dp"
                 tools:listitem="@layout/to_do_item"/>
 
             <LinearLayout
                 android:id="@+id/LL_group_lineSeparator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp">
+                android:layout_marginHorizontal="12dp">
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -80,8 +97,8 @@
                 android:id="@+id/nested_rv_done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginHorizontal="13dp"
+                android:layout_marginTop="3dp"
                 android:padding="4dp"
                 tools:listitem="@layout/to_do_item" />
 
