--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -172,7 +172,7 @@
                 android:elevation="5dp">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewCalendar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
@@ -207,7 +207,7 @@
                 android:elevation="5dp">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewNotes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
@@ -243,7 +243,7 @@
                 android:elevation="5dp">
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewTodo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
