--- a/app/src/main/res/layout/to_do_group.xml
+++ b/app/src/main/res/layout/to_do_group.xml
@@ -70,10 +70,16 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="5dp">
+
                 <TextView
+                    android:id="@+id/newItem"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Agregar nuevo evento"/>
+                    android:fontFamily="@font/source_sans_pro"
+                    android:text="Agregar nuevo evento"
+                    android:textColor="#5F5F5F"
+                    android:textSize="16sp"
+                    android:typeface="normal" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
