--- a/app/src/main/res/layout/fragment_new_item.xml
+++ b/app/src/main/res/layout/fragment_new_item.xml
@@ -3,32 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_bg"
     tools:context=".NewItemFragment"
     android:orientation="vertical">
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:layout_height="match_parent"
-    android:background="@drawable/rounded_shape"
+    android:layout_height="100dp"
     android:orientation="horizontal"
-    android:gravity="center">
+    android:gravity="center"
+    tools:ignore="UselessParent">
 
     <EditText
         android:id="@+id/ToDoTextET"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_margin="10dp"
         android:layout_weight="2"
+        android:autofillHints="ToDo"
         android:background="@drawable/item_pendiente"
         android:ems="20"
-        android:layout_margin="10dp"
+        android:fontFamily="@font/source_sans_pro"
+        android:hint="Ingresa tarea"
         android:inputType="text"
         android:padding="10dp"
         android:textSize="18sp"
-        android:hint="Ingresa tarea"
-        tools:ignore="SpeakableTextPresentCheck"
-        android:autofillHints="ToDo" />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/SaveItemBtn"
