--- a/app/src/main/res/layout/to_do_group.xml
+++ b/app/src/main/res/layout/to_do_group.xml
@@ -19,8 +19,7 @@
             android:id="@+id/ColorCategory"
             android:layout_width="7dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@drawable/radioeventcell"/>
+            android:background="@color/eventoVerde"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,17 +37,13 @@
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
                     android:background="@color/light_bg">
-
                     <TextView
                         android:id="@+id/tv_GroupTitle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
                         android:layout_weight="1"
-                        android:fontFamily="@font/source_sans_pro_semibold"
-                        android:text="8-txt-35"
-                        android:textColor="@color/Morado"
-                        android:textSize="16sp" />
+                        android:layout_marginStart="8dp"
+                        android:text="8-txt-35"/>
 
                     <info.androidhive.fontawesome.FontTextView
                         android:id="@+id/group_arrow"
@@ -57,42 +52,24 @@
                         android:textAlignment="center"
                         android:layout_marginEnd="15dp"
                         android:text="@string/fa_sort_down_solid"
-                        android:padding="5dp"
                         android:textColor="@color/Morado"
                         android:textSize="25sp"
                         app:solid_icon="true" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
-                android:id="@+id/btnAddNewToDo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/newItem"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/source_sans_pro"
-                    android:text="+  Agregar nuevo evento"
-                    android:textColor="#5F5F5F"
-                    android:textSize="16sp"
-                    android:typeface="normal" />
-            </LinearLayout>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/nested_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="4dp"
                 tools:listitem="@layout/to_do_item"/>
 
             <LinearLayout
                 android:id="@+id/LL_group_lineSeparator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp">
+                android:layout_marginHorizontal="16dp">
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -103,8 +80,8 @@
                 android:id="@+id/nested_rv_done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="13dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="4dp"
                 android:padding="4dp"
                 tools:listitem="@layout/to_do_item" />
 
