--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,7 @@
             app:civ_border_color="@color/white"
             app:civ_border_overlay="false"
             app:civ_border_width="2dp"
+            android:onClick="configuracion"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
