--- a/app/src/main/res/layout/to_do_item.xml
+++ b/app/src/main/res/layout/to_do_item.xml
@@ -2,21 +2,39 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_bg">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:background="@color/light_bg">
-            <CheckBox
-                android:id="@+id/cb_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="8dp"
-                android:paddingEnd="0dp"
-                android:theme="@style/checkbox_theme"
-                android:text=""
-                android:background="@color/light_bg"/>
-    </RelativeLayout>
+
+        <CheckBox
+            android:id="@+id/cb_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/light_bg"
+            android:layout_weight="0.1"
+            android:button="@null"
+            android:drawableStart="@drawable/checkbox"
+            android:drawablePadding="5dp"
+            android:fontFamily="@font/source_sans_pro"
+            android:padding="5dp"
+            android:text="Prueba para medir contenedor"
+            android:textSize="16sp" />
+
+        <info.androidhive.fontawesome.FontTextView
+            android:id="@+id/OperacionesItemsFTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/fa_pen_solid"
+            android:textColor="@color/btn_Azul"
+            android:textSize="15sp"
+            app:solid_icon="true" />
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
