--- a/app/src/main/res/drawable/ficha_general.xml
+++ b/app/src/main/res/drawable/ficha_general.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/light_azul"/>
+    <solid android:color="@color/ficha_Azul"/>
 
     <padding android:left="5dp"
         android:top="5dp"
