--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,7 +108,7 @@
                             android:layout_height="20dp"
                             android:fontFamily="@font/source_sans_pro_semibold"
                             android:text="TextView"
-                            android:textColor="@color/Morado"
+                            android:textColor="@color/MoradoText"
                             android:textSize="15sp" />
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -123,7 +123,7 @@
                                 android:fontFamily="@font/source_sans_pro_semibold"
                                 android:text="-20"
                                 android:textAlignment="viewStart"
-                                android:textColor="@color/Morado"
+                                android:textColor="@color/MoradoText"
                                 android:textSize="35sp"/>
                             <TextView
                                 android:id="@+id/textView2"
@@ -158,7 +158,7 @@
                                 android:fontFamily="@font/source_sans_pro"
                                 android:text="TextView"
                                 android:textAlignment="textStart"
-                                android:textColor="@color/Morado"
+                                android:textColor="@color/MoradoText"
                                 android:layout_marginStart="5dp"
                                 android:textSize="15sp"/>
                         </LinearLayout>
@@ -180,7 +180,7 @@
                         android:layout_marginStart="28dp"
                         android:fontFamily="@font/source_sans_pro_semibold"
                         android:text="Calendario"
-                        android:textColor="@color/Morado"
+                        android:textColor="@color/MoradoText"
                         android:textSize="28sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -225,7 +225,7 @@
                         android:layout_marginStart="28dp"
                         android:fontFamily="@font/source_sans_pro_semibold"
                         android:text="Notas"
-                        android:textColor="@color/Morado"
+                        android:textColor="@color/MoradoText"
                         android:textSize="28sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -261,7 +261,7 @@
                         android:layout_marginStart="28dp"
                         android:fontFamily="@font/source_sans_pro_semibold"
                         android:text="Pendientes"
-                        android:textColor="@color/Morado"
+                        android:textColor="@color/MoradoText"
                         android:textSize="28sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
