--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:fontFamily="@font/source_sans_pro_semibold"
         android:text="1"
-        android:textColor="@color/Morado"
+        android:textColor="@color/MoradoText"
         android:gravity="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
