--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -47,7 +47,7 @@
                 android:minHeight="48dp"
                 android:text="@string/fa_arrow_left_solid"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="20sp"
                 app:solid_icon="true" />
 
@@ -59,7 +59,7 @@
                 android:fontFamily="@font/source_sans_pro_bold"
                 android:text="Noviembre 2021"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="20sp" />
 
 
@@ -75,7 +75,7 @@
                 android:onClick="nextWeekAction"
                 android:text="@string/fa_arrow_right_solid"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="20sp"
                 app:solid_icon="true" />
         </LinearLayout>
@@ -92,7 +92,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="DOM"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -102,7 +102,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="LUN"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -112,7 +112,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="MAR"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -122,7 +122,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="MIE"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -132,7 +132,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="JUE"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -142,7 +142,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="VIE"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
             <TextView
@@ -152,7 +152,7 @@
                 android:fontFamily="@font/source_sans_pro_semibold"
                 android:text="SAB"
                 android:textAlignment="center"
-                android:textColor="@color/Morado"
+                android:textColor="@color/MoradoText"
                 android:textSize="16sp" />
 
 
