--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,13 +9,16 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Colores usados en figma -->
+    <color name="CircleCalendar">#29062E</color>
     <color name="Morado">#29062E</color>
     <color name="MoradoText">#FFFFFF</color>
-    <color name="Light_Morado">#FFB50F</color>
-    <color name="btn_Azul">#198efc</color>
-    <color name="light_bg">#412645</color>
-    <color name="light_azul">#29062E</color>
 
+    <color name="Light_Morado">#FFB50F</color>
+    <color name="btn_Azul">#FFB50F</color>
+    <color name="light_bg">#412645</color>
+
+    <color name="light_azul">#29062E</color>
+    <color name="bg_events">#29062E</color>
 
     <color name="menu_amarillo">#f0ea9c</color>
     <color name="menu_rojo">#ffc9c9</color>
@@ -38,4 +41,8 @@
     <color name="eventoMorado">#8362A7</color>
     <color name="eventoVerde">#4BB168</color>
     <color name="eventoRosa">#E86DA4</color>
+
+    <!-- Colores del borde de los eventos -->
+    <color name="border_events">#05FFFFFF</color>
+    <color name="border_eventsM">#10FFFFFF</color>
 </resources>
