--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Colores usados en figma -->
-    <color name="CircleCalendar">#F7F5F7</color>
+    <color name="CircleCalendar">#EDECEC</color>
     <color name="Morado">#29062E</color>
     <color name="MoradoText">#29062E</color>
 
