--- a/app/src/main/res/layout/fragment_new_group.xml
+++ b/app/src/main/res/layout/fragment_new_group.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/source_sans_pro_bold"
-        android:text="Grupos"
+        android:text="Categoría"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="34sp" />
